Fri Oct  7 19:14:29 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIAO-INSTALL.html:
        
          Updated CIDL compiler section with instructions for building
          the CIDL compiler using MPC.

Fri Oct  7 18:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeManager_Impl.{h,inl}:
          Removed inl file, it is empty

        * DAnCE/ExecutionManager/ExecutionManager_Impl.inl:
          Removed, empty

Thu Oct  6 16:52:21 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        *
          DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Added more debug statements and comments.

Thu Oct  6 16:11:56 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        *
          DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Added more debug statements and also comments in the code.

Thu Oct  6 15:32:41 CDT 2005 Stoyan Paunov spaunov@isis.vanderbilt.edu

	* DAnCE/spec_RepositoryManager/PC_Updater.cpp
	* DAnCE/spec_RepositoryManager/PC_Updater.h
	* DAnCE/spec_RepositoryManager/PC_Updater_T.cpp
	* DAnCE/spec_RepositoryManager/PC_Updater_T.h

	Added these files which implement a PackageConfiguration visitor.
	The visitor helps deal with the internal complexity of the PackageConfiguration
	and helps preseve my sanity ;)

	* DAnCE/spec_RepositoryManager/RepositoryManager_Impl.cpp
	* DAnCE/spec_RepositoryManager/RepositoryManager_Impl.h
	* DAnCE/spec_RepositoryManager/ZIP_Wrapper.cpp
	* DAnCE/spec_RepositoryManager/ZIP_Wrapper.h

	Some more code. With this the package distribution part of the RM
	is ready. I still need to clean up a few details. This is coming soon.


Thu Oct  6 15:05:30 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:

          Added debug statements and comments.

Thu Oct  6 14:26:31 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ExecutionManager/DAM_Map.cpp: